--- a/index.html
+++ b/index.html
@@ -1,54 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Test Page: Don't Panic</title>
-    <meta charset="utf-8">
-    <style>
-      a{
-        color: red;
-      }
-      #bg-orange{
-        background-color: orange;
-      }
-      #exec-bio{
-        background-color: lightgray;
-      }
-      .bg-azure{
-        background-color: azure;
-      }
-      .bio-box{
-        border: 1px solid black;
-      }
-      .bio-box a{
-        color: green;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>I'm an h1</h1>
-    <ul>
-      <li>
-        <a id='bg-orange' href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-      <li>
-        <a href="http://example.com/">Link</a>
-      </li>
-    </ul>
-    <h2>I'm an h2</h2>
-    <div id='exec-bio' class='bio-box bg-azure'>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div class='bio-box bg-azure'>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div class='bio-box bg-azure'>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-    <div class='bio-box bg-azure'>
-      <a href="http://example.com/">I'm a link</a>
-    </div>
-  </body>
-</html>
+---
+layout: default
+---
